kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: asset-v3
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
#      nodePort: 31515
  selector:
    app: react
